--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         width: 33%;
         color: white;
         box-shadow: 0px 0px 10px white;
-        height: 150px;
+        height: auto;
     }
     a {
         color: blue;
