Adjust container height for responsiveness
Updated container height to auto for better responsiveness.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         width: 33%;
         color: white;
         box-shadow: 0px 0px 10px white;
-        height: 150px;
+        height: auto;
     }
     a {
         color: blue;
@@ -38,4 +38,5 @@
         <a href="https://discord.gg/mswtNUGua">Click to join my discord server</a>
     </div>
 </body>
+
 </html>
