Fix HTML structure and update links text

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
 <body>
     <div class="container">
         <h1>Andrea Petrone</h1>
-        <a href="https://www.tiktok.com/@andrea.petrone01">Click to on my tiktok page</a><br>
-        <a href="https://discord.gg/mswtNUGua">Click to join my discord server</a>
+        <a href="https://www.tiktok.com/@andrea.petrone01">Click to go on my tiktok page</a><br>
+        <a href="https://discord.gg/mswtNUGua">Click to join on my discord server</a>
     </div>
 </body>
 
 </html>
+
